--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>Some of George Washington Carver's Peanut Based inventions:</h3>
     <ul>
       <li>Adhesives</li>
-      <li>Bleach</li>
+      <li>Food123</li>
       <li>Chili Sauce</li>
       <li>Dyes</li>
       <li>Flour</li>
@@ -44,7 +44,7 @@
 
   <div class="bio">
     <h3>Biography</h3>
-    <img src="gwcarver03.jpeg">
+    <img src="./gwcarver03.jpeg">
     <p>George Washington Carver was an American agricultural chemist, agronomist, and experimenter whose development of
       new products derived from peanuts (groundnuts), sweet potatoes, and soybeans helped revolutionize the agricultural
       economy of the South.</p>
@@ -52,7 +52,7 @@
 
   <div class="childhood">
     <h3>Childhood</h3>
-    <img src="gwcarver04.jpeg">
+    <img src="./gwcarver04.jpeg">
     <p>George Washington Carver was born into slavery, the son of an enslaved woman named Mary, owned by Moses Carver.
       During the American Civil War, George and Mary were kidnapped and taken away to be sold. Moses Carver located
       George but not Mary, and George lived on the Carver property until about age 10 or 12.</p>
@@ -60,7 +60,7 @@
 
   <div class="education">
     <h3>Education</h3>
-    <img src="gwcarver02.jpg">
+    <img src="./gwcarver02.jpg">
     <p>In his late 20s George Washington Carver obtained a high-school education in Kansas while working as a farmhand.
       He received a bachelor’s degree in agricultural science (1894) and a master of science degree (1896) from Iowa
       State Agricultural College (later Iowa State University).</p>
@@ -68,7 +68,7 @@
 
   <div class="legacy">
     <h3>Legacy</h3>
-    <img src="gwcarver01.jpeg">
+    <img src="./gwcarver01.jpeg">
     <p>George Washington Carver’s work, which began for the sake of poor Black sharecroppers, led to a better life for
       the entire South by liberating it from its environmentally destructive dependence on cotton. His efforts brought
       about a significant advance in agricultural training in an era when agriculture was the largest single occupation
